src/components/TabCompleteInput/TabCompleteInput.css
/*
 * Copyright (C)  Online-Go.com
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
.TabCompleteInput {
    /* here */
}

.chat-input-wrapper {
    position: relative;
    width: 100%;
    overflow: visible;
}

.chat-count-warning {
    position: absolute;
    top: -25px;
    right: 0;
    width: auto;
    padding: 2px 6px;
    border-radius: 4px;
    font-size: 11px;
    font-family: inherit;
    text-align: right;
    box-sizing: border-box;
    pointer-events: none;
}

.chat-count-warning.warning {
    background-color: var(--warning-bg);
    color: var(--warning-fg);
}
.chat-count-warning.error {
    background-color: var(--error-boundary-bg);
    color: var(--error-boundary-fg);
}

.chat-input-wrapper textarea {
    width: 100%;
    min-width: 5rem;
    resize: none;
    box-sizing: border-box;
    font-family: inherit;
    font-size: inherit;
    line-height: 1.2;
    border-left: none;
    border-right: none;
    border-top: none;
    padding: 3px 3px;
    outline: none;
    vertical-align: bottom;
}

